# Smart-Gallery

./: .env.dev  .gitignore  LICENSE  README.md  clip.py  docker-compose.yml  et --hard 221f44b  free.ipynb  git_hub.txt  nginx.conf  pyproject.toml  ruclip.ipynb  Описание программного проекта.docx  Текст программы.docx  Техническое задание.docx
App/: config.py  gallery.db  main.py  routes.py
App/controllers/: file_handler.py  navigation.py
App/utils/: database.py  search.py  theme.py
App/views/: del_images_view.py  image_view.py  main_view.py
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  repository.py  router.py  schemas.py
backend/app/api/: __init__.py  ml_api.py
backend/app/database/: __init__.py  minio_client.py  postgres_client.py  qdrant_client.py  test_data.py
backend/app/repository/: __init__.py  base_repository.py  minio_repository.py  postgres_repository.py  qdrant_repository.py  repository.py
backend/app/utils/: __init__.py  add_image.py  delete_image.py
clip_fine_tuning/: README.md  pyproject.toml  requirements.txt
clip_fine_tuning/dataset/: 1. qwen25_test.ipynb  2. clip993.ipynb  2. image_labeling.ipynb  clip.db  qwen_api_keys.json
clip_fine_tuning/dataset/src/: database.py  models.py  repository.py  ruclip_dataset.py
clip_fine_tuning/models/: 1. clip_vit_b_32.ipynb  1. open_clip.ipynb  2. ruclip.ipynb  3. ruclip_tiny.ipynb  3. ruclip_trainby_clip100.ipynb  4. ruclip_clip993.ipynb
clip_fine_tuning/models/fine-tuning/: 1. ruclip_clip100.ipynb  1. ruclip_clip993.ipynb
frontend/: Dockerfile  README.md  free.py  pyproject.toml  requirements.txt
frontend/app/: config.py  main.py  routes.py
frontend/app/api/: __init__.py  image_api.py  images_api.py
frontend/app/data/: __init__.py  image_data.py
frontend/app/utils/: image_data.py  theme.py
frontend/app/views/: __init__.py  base_view.py  delete_images_view.py  home_view.py  image_view.py  images_view.py  search_images_view.py
frontend/app/views/mixins/: __init__.py  app_bar_mixin.py  grid_mixin.py  nav_bar_mixin.py
frontend/app/views3/: delete_images_view.py  image_view.py  images_view.py  search_images_view.py
ml/: open_clip.ipynb
ml-api/: requirements.txt
ml-api/app/: config.py  database.py  main.py  repository.py  router.py  schemas.py
ml_api/: .dockerignore  Dockerfile  README.md  requirements.txt
ml_api/app/: config.py  main.py  router.py  schemas.py
ml_api/clip-fine_tuning/: 1. clip_vit_b_32.ipynb  (+2 more)
smart_gallery/: config.py  main.py  routes.py
technical_docs/: github.txt
(+17 files in other folders)
