[tool.poetry]
name = "smart_gallery"
version = "0.1.0"
description = "\"Умная галерея\" — это программный проект, нацеленный на автоматизацию управления фотогалереей с использованием технологий машинного обучения. Приложение будет включать поиск дубликатов изображений, фильтрацию по запросам и простой пользовательский интерфейс."
authors = ["GrishaTS <bezgrisa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.26.0"
open-clip-torch = "^2.30.0"
torch = "^2.6.0"
torchvision = "^0.21.0"
pillow = "^11.1.0"
transformers = "^4.48.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
