[tool.poetry]
name = "clip-fine-tuning"
version = "0.1.0"
description = "Дообучение clip для Smart Gallery"
authors = ["GrishaTS"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
sqlalchemy = "2.0.40"
sqlalchemy-utils = "0.41.2"
aiosqlite = "0.21.0"
dashscope = "1.23.0"
tqdm = "4.67.1"
requests = "2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
