[tool.poetry]
name = "smart-gallery-frontend"
version = "0.1.0"
description = "Frontend-клиент для управления фотогалереей Smart Gallery, разработанный с использованием Flet. Обеспечивает удобный пользовательский интерфейс для просмотра, загрузки, удаления изображений и поиска по ключевым словам, взаимодействуя с backend API."
authors = ["GrishaTS <bezgrisa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.26.0"
httpx = "^0.28.1"
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
